<resources>

    <string name="app_name">Quiz Tester</string>
    <string name="email_engizu">Email енгізіңіз</string>
    <string name="password_engizu">Құпия сөз енгізіңіз</string>
    <string name="kiru">Кіру</string>
    <string name="tirkelu">Тіркелу</string>
    <string name="tolyk_toltyru">Толық толтырыңыз</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_baba">Baba</string>
    <string name="menu_anne">Anne</string>
    <string name="menu_bro">Bro</string>
    <string name="menu_kardes">Kardes</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>

</resources>