<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_baba"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_baba" />
        <item
            android:id="@+id/nav_anne"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_anne" />
        <item
            android:id="@+id/nav_bro"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bro" />
        <item
            android:id="@+id/nav_kardes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_kardes" />
    </group>
</menu>