<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_baba">

    <fragment
        android:id="@+id/nav_baba"
        android:name="com.example.quiztester.fragments.FragmentBaba"
        android:label="@string/menu_baba"
        tools:layout="@layout/fragment_1" />

    <fragment
        android:id="@+id/nav_anne"
        android:name="com.example.quiztester.fragments.FragmentAnne"
        android:label="@string/menu_anne"
        tools:layout="@layout/fragment_2" />

    <fragment
        android:id="@+id/nav_bro"
        android:name="com.example.quiztester.fragments.FragmentBro"
        android:label="@string/menu_bro"
        tools:layout="@layout/fragment_3" />

    <fragment
        android:id="@+id/nav_kardes"
        android:name="com.example.quiztester.fragments.FragmentKardes"
        android:label="@string/menu_kardes"
        tools:layout="@layout/fragment_4" />
</navigation>