<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".authenfication.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/quiz_logo"/>

    <EditText
        android:id="@+id/et_useremail"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:hint="@string/email_engizu"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_userpassword"
        android:layout_width="match_parent"
        android:hint="@string/password_engizu"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/kiru"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/tirkelu"/>



</LinearLayout>